--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "@remix-run/react": "^2.7.2",
     "@remix-run/serve": "^2.7.2",
     "isbot": "^4.1.0",
+    "lodash-es": "^4.17.21",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.7.2",
+    "@types/lodash-es": "^4.17.12",
+    "@types/qs": "^6.9.12",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
